; ModuleID = '/home/carl/AnghaBench/tmux/extr_format.c_format_logging.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_format.c_format_logging.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.format_tree = type { i32 }

@FORMAT_VERBOSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.format_tree*)* @format_logging to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @format_logging(%struct.format_tree* %0) #0 {
  %2 = alloca %struct.format_tree*, align 8
  store %struct.format_tree* %0, %struct.format_tree** %2, align 8
  %3 = call i64 (...) @log_get_level()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %12, label %5

5:                                                ; preds = %1
  %6 = load %struct.format_tree*, %struct.format_tree** %2, align 8
  %7 = getelementptr inbounds %struct.format_tree, %struct.format_tree* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @FORMAT_VERBOSE, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br label %12

12:                                               ; preds = %5, %1
  %13 = phi i1 [ true, %1 ], [ %11, %5 ]
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i64 @log_get_level(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
